--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
 :root {
-    --text: #130f0b;
-    --background: #f9f6f4;
-    --primary: #2B4570;
-    --secondary: #7180AC;
-    --accent: #A8D0DB;
+  --text: #130f0b;
+  --background: #f9f6f4;
+  --primary: #2b4570;
+  --secondary: #7180ac;
+  --accent: #a8d0db;
 }
 
 @font-face {
-    font-family: "Inter";
-    src: url("/Inter.woff2") format("woff2");
-    font-weight: 400;
-    font-style: normal;
+  font-family: "Inter";
+  src: url("/Inter.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
 }
 
 body {
-    background-color: var(--background);
-    color: var(--text);
-    font-family: "Inter", sans-serif;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
+  background-color: var(--background);
+  color: var(--text);
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
@@ -27,59 +27,66 @@ h2,
 h3,
 h4,
 h5 {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 html {
-    font-size: 100%;
+  font-size: 100%;
 }
 
 /* 16px */
 
 h1 {
-    font-size: 4.21rem; /* 67.36px */
+  font-size: 4.21rem; /* 67.36px */
 }
 
 h2 {
-    font-size: 3.158rem; /* 50.56px */
+  font-size: 3.158rem; /* 50.56px */
 }
 
 h3 {
-    font-size: 2.369rem; /* 37.92px */
+  font-size: 2.369rem; /* 37.92px */
 }
 
 h4 {
-    font-size: 1.777rem; /* 28.48px */
+  font-size: 1.777rem; /* 28.48px */
 }
 
 h5 {
-    font-size: 1.333rem; /* 21.28px */
+  font-size: 1.333rem; /* 21.28px */
 }
 
 small {
-    font-size: 0.75rem; /* 12px */
+  font-size: 0.75rem; /* 12px */
 }
 
 p,
 img,
 video {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 hero-card {
-    position: absolute;
-    transform: translateX(calc(50vw - 130px + var(--offset) * 276px)) translateY(abs(calc(1rem * var(--offset)))) rotate(calc(2deg * var(--offset)));
+  position: absolute;
+  transform: translateX(calc(50vw - 130px + var(--offset) * 276px))
+    rotate(calc(2deg * var(--offset)))
+    translateY(calc(1rem * max(var(--offset), calc(-1 * var(--offset)))));
+}
+
+hero-card[data-selected="true"] {
+  box-shadow: 4px 8px 0 4px var(--accent);
+  border-radius: 8px;
 }
 
 main {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: start;
-    overflow-x: hidden;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    height: 512px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  height: 512px;
 }
